<resources>
    <string name="prefs_file">com.com.yennyh.capripicnic.PREFERENCES_FILE_KEY</string>
    <string name="app_name" translatable="false">CapriPicnic</string>
    <string name="logo">logo</string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="Forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="sign_in">Iniciar sesión</string>
    <string name="new_user_sign_up">¿Nuevo usuario? REGISTRARSE</string>
    <string name="name">Nombre</string>
    <string name="enter_password_again">Ingrese la contraseña de nuevo</string>
    <string name="do_you_accept_the_terms">Acepta los terminos?</string>
    <string name="register">Registrarse</string>
    <string name="have_a_count_sign_in">¿Tiene una cuenta? INICIAR SESIÓN</string>
    <string name="password_recovery">Recuperar contraseña</string>
    <string name="submit">Enviar</string>
    <string name="welcome">Bienvenido</string>
    <string name="logout">Cerrar sesión</string>
    <string name="user_edit">Editar usuario</string>
    <string name="products_fragment_description">"SESION DE LISTADO DE LOS 4 PRODUCTOS (leche, yogur, arequipe, queso) "</string>
    <string name="home_fragment_description">"SESION DE LISTADO y DESCRIPCION DE ACTIVIDADES  (picnic, senderismo, gastronomia, granja) "</string>
    <string name="reservations__description">"SESION DE LISTADO DE LOS 4 TEMAS DE PICNIC (lovers,rest,celebration) "</string>
    <string name="caramelized_milk_description">" Descripción de producto arequipe"</string>
    <string name="yogurt_description">" Descripción de producto yogurt"</string>
    <string name="cheese_description">"  Descripción de producto cheese"</string>
    <string name="milk_description">" Descripción de producto milk"</string>
    <string name="lovers_description">" Descripción de producto picnic lovers"</string>
    <string name="rest_description">" Descripción de producto picnic rest"</string>
    <string name="celebration_description">" Descripción de producto picnic celebration"</string>
    <string name="quote_description">"Cotización del pedido, con botones para elegir si comprar o guardar en cotizaciones"</string>
    <string name="payment_description">"Aviso de pago con terminos y condiciones y boton de confirmar compra"</string>
    <string name="my_quotes_description">"lista de todas las cotizaciones realizadas y guardadas con opciones de eliminar, editar o comprar"</string>
    <string name="my_purchases_description">"lista de todas las compras hechas con boton de solicitar cambio"</string>
    <string name="title_activity_navigation_drawer">NavegationDrawerActivity</string>
    <string name="action_settings">Settings</string>
    <string name="my_quotes">Mis cotizaciones</string>
    <string name="my_account">Mi cuenta</string>
    <string name="my_purchases">Mis compras</string>
    <string name="account_description"> Información general de la cuenta con botones para editar</string>
    <string name="nav_title_capripicnic">CapriPicnic</string>
    <string name="my_reservations">Mis reservaciones</string>
    <string name="products">Productos</string>
    <string name="title_activity_bottom_navigation">MainActivity</string>
    <string name="home">Home</string>
    <string name="reservations">Reservaciones</string>
    <string name="my_reservations_description"> Lista de las reservaciones pagadas</string>
    <string name="phone">Teléfono</string>
    <string name="yogurt">YOGUR</string>
    <string name="milk">LECHE</string>
    <string name="textView">TextView</string>
    <string name="title_activity_maps">Map</string>
    <string name="map">Map</string>
    <string name="maps">Mapas</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_withGoogle">Iniciar sesión con Google</string>
    <string name="quote">Cotizar</string>
    <string name="lastName">Apellido</string>
    <string name="document_type">Tipo de documento</string>
    <string name="number">Número</string>
    <string name="address">Dirrección</string>
    <string name="sample_text">Sample text</string>
    <string name="details_title">Title</string>
    <string name="description_textView">Description</string>
    <string name="role">Rol</string>
    <string name="document_number">Numero de documento</string>
    <string name="characteristics_of_my_order">Caracteristicas de mi orden</string>
    <string name="update">Actualizar</string>
    <string name="onUpdate_accountView">Desea actualizar?</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="current_password">Actual contraseña</string>
    <string name="precio">Precio</string>
    <string name="buy">Comprar</string>
    <string name="detalle">Detalle:</string>
    <string name="reservar">Reservar</string>
    <string name="menu">Menú</string>
    <string name="racdecordero">Rack de cordero</string>
    <string name="hamburguesa">Hamburguesa de cordero</string>
    <string name="lomo">Lomo de cerdo</string>
    <string name="churrasco">Churrasco</string>
    <string name="aderezos">Aderezos</string>
    <string name="miel">Miel</string>
    <string name="colagranualda">Kola granulada</string>
    <string-array name="document_type_options_list">
        <item>CC</item>
        <item>CE</item>
        <item>TI</item>
        <item>PS</item>
        <item>OTRO</item>
    </string-array>
</resources>