<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/myQuotesFragment"
        android:orderInCategory="100"
        android:icon="@drawable/ic_my_quotes"
        android:title="@string/my_quotes"
        app:showAsAction="never" />
    <item
        android:id="@+id/myPurchaseFragment"
        android:orderInCategory="100"
        android:icon="@drawable/ic_my_purchases"
        android:title="@string/my_purchases"
        app:showAsAction="never" />
    <item
        android:id="@+id/myReservationsFragment"
        android:orderInCategory="100"
        android:title="@string/my_reservations"
        android:icon="@drawable/ic_my_reservations"
        app:showAsAction="never" />
    <item
        android:id="@+id/myAccountFragment"
        android:orderInCategory="100"
        android:title="@string/my_account"
        android:icon="@drawable/ic_my_account"
        app:showAsAction="never" />
    <item
        android:id="@+id/adminFragment"
        android:orderInCategory="100"
        android:title="@string/my_account"
        android:icon="@drawable/ic_baseline_admin_panel_settings_24"
        app:showAsAction="never" />
</menu>