<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_products">

    <fragment
        android:id="@+id/nav_products"
        android:name="com.yennyh.capripicnic.ui.fragments.products"
        android:label="@string/products" />
    <fragment
        android:id="@+id/nav_myQuotes"
        android:name="com.yennyh.capripicnic.ui.fragments.quote"
        android:label="@string/my_quotes" />
    <fragment
        android:id="@+id/nav_myPurchase"
        android:name="com.yennyh.capripicnic.ui.fragments.my_purchase"
        android:label="@string/my_purchases" />
    <fragment
        android:id="@+id/nav_myReservations"
        android:name="com.yennyh.capripicnic.ui.fragments.reservas"
        android:label="@string/products" />
</navigation>