<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_products"
        android:orderInCategory="100"
        android:title="@string/products_fragment_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/nav_myQuotes"
        android:orderInCategory="100"
        android:title="@string/my_quotes"
        app:showAsAction="never" />
    <item
        android:id="@+id/nav_myPurchase"
        android:orderInCategory="100"
        android:title="@string/my_purchases"
        app:showAsAction="never" />
    <item
        android:id="@+id/nav_myReservations"
        android:orderInCategory="100"
        android:title="@string/my_reservations"
        app:showAsAction="never" />
</menu>