<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/authLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".ui.activities.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        tools:ignore="UselessParent"
        android:layout_marginTop="16dp">

        <!-- Icon-->
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_logo_white_red"
            tools:ignore="ContentDescription" />

        <!-- Email -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_textFieldLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/email"
            android:textColorHint="@android:color/darker_gray"
            app:boxBackgroundColor="@android:color/white"
            app:hintTextColor="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="10dp"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_textFieldLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            android:textColorHint="@android:color/darker_gray"
            app:boxBackgroundColor="@android:color/white"
            app:counterEnabled="true"
            app:counterMaxLength="8"
            app:counterOverflowTextColor="@android:color/holo_green_light"
            app:counterTextColor="@android:color/white"
            app:hintTextColor="@color/colorAccent"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_vpn_key_24"
                android:drawablePadding="10dp"
                android:inputType="textPassword"
                android:padding="10dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Forgot password -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/forgotPassword_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="5dp"
            android:text="@string/Forgot_password"
            android:textColor="@android:color/white" />

        <!-- Sign in mail-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/signIn_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:padding="20dp"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="21sp"
            app:backgroundTint="@color/colorAccent"
            app:cornerRadius="30dp" />
        <!-- Sign in Google-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/signIn_withGoogle_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"
            android:gravity="center_horizontal"
            android:padding="20dp"
            android:text="@string/sign_in_withGoogle"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:backgroundTint="@android:color/holo_green_light"
            app:cornerRadius="30dp"
            app:icon="@drawable/googleg_disabled_color_18" />
        <!-- Sign up -->
        <TextView
            android:id="@+id/singUp_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/new_user_sign_up"
            android:textColor="@android:color/white"
            android:textColorLink="@color/colorAccent"
            android:textSize="21sp" />
    </LinearLayout>
</ScrollView>