<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".ui.activities.passwordrecovery.PasswordRecoveryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!-- Logo register view-->
        <ImageView
            android:id="@+id/logo_register"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_logo_transparent_white"
            tools:ignore="ContentDescription" />
        <!-- Name -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameRegister_textFieldLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:textColorHint="@android:color/darker_gray"
            app:boxBackgroundColor="@android:color/white"
            app:hintTextColor="@color/colorAccent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_register"
            app:layout_constraintWidth_percent=".45">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameRegister_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="5dp"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:shadowColor="#A6A6A6" />
        </com.google.android.material.textfield.TextInputLayout>
        <!--  Last name -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastNameRegister_textFieldLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:textColorHint="@android:color/darker_gray"
            app:boxBackgroundColor="@android:color/white"
            app:hintTextColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_register"
            app:layout_constraintWidth_percent=".45">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastNameRegister_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="5dp"
                android:hint="@string/lastName"
                android:inputType="textPersonName|text"
                android:shadowColor="#A6A6A6" />
        </com.google.android.material.textfield.TextInputLayout>
        <!-- Document type -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/documentType_TextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/document_type"
            android:textColorHint="@android:color/darker_gray"
            app:boxBackgroundColor="@android:color/white"
            app:endIconMode="dropdown_menu"
            app:hintTextColor="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@+id/emailRegister_textFieldLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent=".45">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/documentType_AutocompleteTextView"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_account_box_24"
                android:drawablePadding="5dp"
                android:inputType="none"
                android:shadowColor="#A6A6A6" />

        </com.google.android.material.textfield.TextInputLayout>
        <!-- Document number -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/documentNumber_textFieldLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:textColorHint="@android:color/darker_gray"
            app:boxBackgroundColor="@android:color/white"
            app:hintTextColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastNameRegister_textFieldLayout"
            app:layout_constraintWidth_percent=".45">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/documentNumber_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_account_box_24"
                android:drawablePadding="5dp"
                android:hint="@string/number"
                android:inputType="number"
                android:shadowColor="#A6A6A6" />
        </com.google.android.material.textfield.TextInputLayout>
        <!-- Email -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailRegister_textFieldLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/email"
            android:textColorHint="@android:color/darker_gray"
            app:boxBackgroundColor="@android:color/white"
            app:hintTextColor="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/documentNumber_textFieldLayout"
            app:layout_constraintWidth_percent=".45">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailRegister_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_contact_mail_24"
                android:drawablePadding="5dp"
                android:inputType="textEmailAddress"
                android:shadowColor="#A6A6A6" />
        </com.google.android.material.textfield.TextInputLayout>
        <!-- Phone -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneRegister_textFieldLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/phone"
            android:textColorHint="@android:color/darker_gray"
            app:boxBackgroundColor="@android:color/white"
            app:hintTextColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/documentNumber_textFieldLayout"
            app:layout_constraintWidth_percent=".45">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneRegister_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_contact_phone_24"
                android:drawablePadding="5dp"
                android:inputType="phone"
                android:shadowColor="#A6A6A6" />
        </com.google.android.material.textfield.TextInputLayout>
        <!-- Address-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addressRegister_textFieldLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/address"
            android:textColorHint="@android:color/darker_gray"
            app:boxBackgroundColor="@android:color/white"
            app:hintTextColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/emailRegister_textFieldLayout"
            app:layout_constraintTop_toBottomOf="@+id/emailRegister_textFieldLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addressRegister_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_home_24"
                android:drawablePadding="5dp"
                android:inputType="textEmailAddress"
                android:shadowColor="#A6A6A6" />
        </com.google.android.material.textfield.TextInputLayout>
        <!-- Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordRegister_textFieldLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/Contraseña"
            android:textColorHint="@android:color/darker_gray"
            app:boxBackgroundColor="@android:color/white"
            app:counterEnabled="true"
            app:counterMaxLength="8"
            app:counterOverflowTextColor="@android:color/holo_green_light"
            app:counterTextColor="@android:color/white"
            app:hintTextColor="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addressRegister_textFieldLayout"
            app:layout_constraintWidth_percent=".45"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordRegister_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_vpn_key_24"
                android:drawablePadding="5dp"
                android:inputType="textPassword"
                android:padding="10dp"
                android:shadowColor="#A6A6A6" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password verify -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordVerifiedRegister_textFieldLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/enter_password_again"
            android:textColorHint="@android:color/darker_gray"
            app:boxBackgroundColor="@android:color/white"
            app:counterEnabled="true"
            app:counterMaxLength="8"
            app:counterOverflowTextColor="@android:color/holo_green_light"
            app:counterTextColor="@android:color/white"
            app:hintTextColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addressRegister_textFieldLayout"
            app:layout_constraintWidth_percent=".45"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordVerifiedRegister_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_vpn_key_24"
                android:drawablePadding="5dp"
                android:inputType="textPassword"
                android:padding="5dp"
                android:shadowColor="#A6A6A6" />
        </com.google.android.material.textfield.TextInputLayout>
        <!-- Terms accept -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/checkbox_linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordRegister_textFieldLayout">

            <CheckBox
                android:id="@+id/acceptTermsRegister_checkbox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/do_you_accept_the_terms"
                android:textColor="@android:color/white" />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <!-- Register -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:padding="20dp"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:textSize="21sp"
            app:backgroundTint="@color/colorAccent"
            app:cornerRadius="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkbox_linearLayout" />
        <!-- Sign in Google-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/signIn_withGoogle_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:padding="20dp"
            android:text="@string/sign_in_withGoogle"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:backgroundTint="@android:color/holo_green_light"
            app:cornerRadius="30dp"
            app:icon="@drawable/googleg_disabled_color_18"
            app:iconPadding="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_button" />
        <!-- SIGN IN -->
        <TextView
            android:id="@+id/singInRegister_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:text="@string/have_a_count_sign_in"
            android:textColor="@android:color/white"
            android:textSize="21sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signIn_withGoogle_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>